fixed spacing between hero section title and description, also added some font weight and fixed margins

--- a/style/style.css
+++ b/style/style.css
@@ -64,9 +64,15 @@
 
 .hero-description {
   font-size: 2.4rem;
-  margin-top: 2.4rem;
   line-height: 1.3;
+  font-weight: 600;
   color: #343a40;
+}
+
+.hero-description span {
+  display: inline-block;
+  font-weight: 400;
+  margin-top: 3.2rem;
 }
 
 .hero-img {
